--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: objective-c
+xcode_workspace:ReDemo.xcworkspace
+xcode_scheme: ReDemoTests
+osx_image: xcode7.2 
+
  
 before_install:
   - gem install cocoapods
