--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ osx_image: xcode7.2
 
  
 before_install:
-  - gem install cocoapods
+  - gem install cocoapods -v '0.39.0'
   - pod install
  
 script:
